--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "express": "^4.16.3",
+    "jquery": "^3.3.1",
+    "mysql": "^2.16.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "request": "^2.88.0",
